examples/gallery/errors/parse_missing_expression.fsl
// expected-command: check
// expected-result: error
// expected-kind: parse
spec GalleryParseMissingExpression {
  state { x: Int }
  init { x = }
}
